<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow"
    tools:context=".MainMenu" >

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/purple"
        android:textSize="38sp" />

    <Button
        android:id="@+id/joinRoom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_text"
        android:layout_alignRight="@+id/title_text"
        android:layout_below="@+id/title_text"
        android:layout_marginTop="36dp"
        android:onClick="joinRoom"
        android:text="@string/join_room" />

    <Button
        android:id="@+id/hostRoom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/joinRoom_button"
        android:layout_alignRight="@+id/joinRoom_button"
        android:layout_centerVertical="true"
        android:onClick="hostRoom"
        android:text="@string/host_room" />

    <Button
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hostRoom_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/hostRoom_button"
        android:layout_marginBottom="70dp"
        android:onClick="editAccount"
      	android:textSize="20sp"
      	android:background="@color/purple"
        android:text="@string/account" />

    <TextView
        android:id="@+id/jr_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/joinRoom_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/jr_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/hr_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hostRoom_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/hr_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/acct_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hr_description_text"
        android:layout_alignTop="@+id/account_button"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/acct_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
