<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/introdution_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/question_lists_introduction"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/questionLists_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/introdution_TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" >

        <LinearLayout
            android:id="@+id/questionLists_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonOptions_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/questionLists_ScrollView"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_List_Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" >
        </Button>

        <Button
            android:id="@+id/edit_List_Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickedQList"
            android:text="@string/edit" >
        </Button>

        <Button
            android:id="@+id/delete_List_Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/back_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="back"
        android:text="@string/back" />

</RelativeLayout>