<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/join_room_title_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/jr_introduction"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/room_name_descriptor_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/join_room_title_TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/room_name_descriptor"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/room_name_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room_name_descriptor_TextView"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:inputType="text"
        android:ems="12" >
        
        <requestFocus />
    </EditText>

    
    <EditText
        android:id="@+id/username_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_descriptor_TextView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="top"
        android:inputType="text" />

        

    <EditText
        android:id="@+id/room_password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/username_EditText"
        android:layout_below="@+id/room_password_descriptor_TextView"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/room_password_descriptor_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/room_name_EditText"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:text="@string/room_password_descriptor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/username_descriptor_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/room_password_EditText"
        android:layout_marginTop="31dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/user_name_descriptor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="back"
        android:text="@string/back" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="connect"
        android:text="@string/connect" />

</RelativeLayout>
